--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ header{
             color: red;
         }
 main{
-    background-color: red;
+    display: inline-block;
     width: 1000px;
     margin-left:calc( ( 100% - 1000px) / 2);
     }
@@ -44,6 +44,7 @@ main{
         width: 40%;
         float: left;
         margin-top: 150px;
+        
     }
 
         h1{
